 API changes
  * Switch to HttpRandomAccessFile (improvements in HttpClient use)
  * add ProjectionImpl.constructCopy() - deprecate clone()
  * NetcdfFile.hasRecordStructure - optimization for Netcdf-3 writing.
  * NetcdfFileWriteable.addVariable() now returns the new Variable
  * protected NetcdfFile constructor for passing in iosp class name
  * add GridCoordSys.getLatLon()
 Bugs
  * FileWriter allows recno = 0.
  * thredds.util.getDateUsingCompleteDateFormatWithOffset() : java.text.SimpleDateFormat is grabbing extra characters at the end.
      Filed bug report with Sun. workaround : truncate the input string.
  * DODS Grids: check for coordinates attribute, add to _Coordinate.Axes
  * NetcdfFileWriteable: bug when FillValue = ""
  * COARDS: dont assign units="m" to AxisType.HEIGHT
  * AggregationNew: look for _CoordinateAxes and add new dimension
  * NcML: silent failure when incorrect # <values>
  * Convention attribute: look for "/" separator
  * VariableDS has scale/offset attributes removed when its enhanced.
  * CoordinateAxis2D.getValues() not checking if read in
  * M3IOConvention wasnt working 
  * Grib2: levels 0 and 255 means no level name
  * NCdump.print was using NetcdfFileCache
 ToolsUI
  * File menu has "clear HTTP state" option.
  * HttpSession deprecated, use HttpClientManager.
  * GridUI: bug in showDatasetXMLAction, rename showNcML; add showGridDatasetInfo XML
  * add refresh button to FileManager
 Libraries
  * opendap now in seperate jar opendap.2.0, includes gnu-regexp, gnu-getopt
  * bring ucar.util.prefs into ui module, use jgoodies.forms.1.0.7
  * upgrade visadNoDods.jar to latest(01/29/07) CVS version
  * upgrade commons libraries: httpclient.3.0.1, logging-1.1
  * upgrade log4j : nlog4j.1.2.25, slf4j-jdk14-1.2
  * detect if java version 1.5+ in XMLEntityResolver, dont need to include Xerces if so.
  * grib-5.1.02
  * bufr-1.1.00

 Changes in version 2.2.18
 Bugs
  * Gini strides not working