@@ -38,7 +38,7 @@
 </ol>
 <h3>See also :</h3>
 <ul>
-  <li> _Coordinate Attribute <a href="CoordinateAttributes.html">Examples</a> </li>
+  <li> _Coordinate Attribute <a href="../tutorial/CoordinateAttributes.html">Examples</a> </li>
 </ul>
 <h3>Contents</h3>
 <ol><li><a href="#CoordinateAttributes">Coordinate Attributes Definition</a></li>
@@ -168,7 +168,7 @@
 </ol>
 <hr WIDTH="100%">
 <address>
-<img src="../nc.gif" width="64" height="64"> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on Oct 20, 2006
+<img src="../nc.gif" width="64" height="64"> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on Apr 11, 2007 
 </address>
 <p>&nbsp;</p>
 </body>
